5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1800_2571.log
== TEST (2019-06-11 11:38:02) 
-- CODE:
s  = input("Frase:")

saida = ''

for i in range(len(s)):
	if s[i].upper() != 'A':
		saida = saida + string[i]
	print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    saida = saida + string[i]
NameError: name 'string' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:38:14) 
-- CODE:
s  = input("Frase:")

saida = ''

for i in range(len(s)):
	if s[i].upper() != 'A':
		saida = saida + s[i]
	print(saida)
-- OUTPUT:
I
In
Ins
Inst
Insti
Instit
Institu
Institut
Instituto
Instituto_
Instituto_d
Instituto_de
Instituto_de_
Instituto_de_C
Instituto_de_Co
Instituto_de_Com
Instituto_de_Comp
Instituto_de_Compu
Instituto_de_Comput
Instituto_de_Comput
Instituto_de_Computc
Instituto_de_Computc
Instituto_de_Computco
Instituto_de_Computco-
Instituto_de_Computco-I
Instituto_de_Computco-IC
Instituto_de_Computco-ICO
Instituto_de_Computco-ICOM
Instituto_de_Computco-ICOMP
Instituto_de_Computco-ICOMP-
Instituto_de_Computco-ICOMP-U
Instituto_de_Computco-ICOMP-UF
Instituto_de_Computco-ICOMP-UF
Instituto_de_Computco-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:38:29) 
-- CODE:
s  = input("Frase:")

saida = ''

for i in range(len(s)):
	if s[i].upper() != 'A':
		saida = saida + s[i]
print(saida)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:38:36) 
-- CODE:
s  = input("Frase:")

saida = ''

for i in range(len(s)):
	if s[i].upper() != 'A':
		saida = saida + s[i]
print(saida)
-- EXECUTION TIME:
0.806796
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
